--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div style="padding: 0; margin:0 ;background-color:black  ; " class="" id="root"></div>
+    <div style="padding: 0; margin:0  ; background-color:black; " id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
